Commit of auto-updates to products

--- a/products/32C5.yaml
+++ b/products/32C5.yaml
@@ -1,4 +1,9 @@
+aliases:
+- 32c-loyalty-discount
+- 32c-99
+- 32c-anniversary-pricing
+- 32c-149
+- mixbus32c-5
 name: Mixbus32C v5
-aliases: [mixbus32c-5, mb32c5, 32c-149, 32c-loyalty-discount, 32c-99]
 price: 1
 set: 32C
