--- a/products/ava-ds.yaml
+++ b/products/ava-ds.yaml
@@ -1,4 +1,7 @@
+aliases:
+- avads-itb-041919
+- ava-ds-offer
+- ava-ds
 name: AVA - De-Esser
-aliases: [ava-ds, avads-itb-041919]
 price: 89
 set: AVA
