--- a/products/ava-mc.yaml
+++ b/products/ava-mc.yaml
@@ -1,4 +1,7 @@
+aliases:
+- ava-mc-offer
+- avamc-itb-041219
+- ava-mc
 name: AVA - Multiband Compressor
-aliases: [ava-mc, avamc-itb-041219]
 price: 89
 set: AVA
