--- a/products/xt-sc.yaml
+++ b/products/xt-sc.yaml
@@ -1,4 +1,7 @@
+aliases:
+- xt-sc-offer
+- xt-sc-special
+- xt-sc
 name: XT-SC
-aliases: [plugin_xt_sc, xt-sc, xt-sc-special, xt-sc-offer]
 price: 29
 set: XT
