--- a/products/ava-lq.yaml
+++ b/products/ava-lq.yaml
@@ -1,4 +1,7 @@
+aliases:
+- ava-legq-offer
+- avaleg-itb-041619
+- ava-legacyq
 name: AVA - LegacyQ
-aliases: [ava-legacyq, avaleg-itb-041619]
 price: 89
 set: AVA
