--- a/products/mixbus5.yaml
+++ b/products/mixbus5.yaml
@@ -1,4 +1,11 @@
+aliases:
+- mb-loyalty-discount
+- mb-spec-offer-2
+- mb-spec-offer-4
+- mb-spec-offer-3
+- mb-spec-offer
+- mb52up
+- mixbus-5
 name: Mixbus v5
-aliases: [mixbus-5, mb5, mb-loyalty-discount, mb52up]
 price: 1
 set: Mixbus
