--- a/products/mixbus2.yaml
+++ b/products/mixbus2.yaml
@@ -2,3 +2,4 @@ name: Mixbus v2
 aliases: [Mixbus v2 License, Mixbus_2.3_license, mb2_10pack, Mixbus 2 License]
 price: 1
 set: Mixbus
+signer: helium
