Update product definitions
Add new aliases, add XT-DC/VC/BC

Rename old XT-BC (old character bundle) to XT-BC2 and drop xt-bc alias

--- a/products/ava-me.yaml
+++ b/products/ava-me.yaml
@@ -1,11 +1,11 @@
 aliases:
 - ava-me-offer
-- ava-me-itb
+- ava-me-offer-2
 - ava-me
+current: true
 name: AVA - Mastering EQ
+part: ava_me
 price: 89
 set: AVA
 signer: neon
 token: AVA-ME
-part: ava_me
-current: true
