--- a/products/xt-bc3.yaml
+++ b/products/xt-bc3.yaml
@@ -1,12 +1,13 @@
 aliases:
 - xt-bc3-offer
+- xt-bc3-lv2-store
 - xt-bc3
-name: XT-BC3
+current: true
+legacy_aliases:
+- plugin_xt_bc3
+name: XT-BC3 Character Bundle
+part: xt_bc3
 price: 79
 set: XT
 signer: helium
 token: c
-part: xt_bc3
-legacy_aliases:
-  - plugin_xt_bc3
-current: true
