--- a/products/xt-ds.yaml
+++ b/products/xt-ds.yaml
@@ -1,12 +1,13 @@
 aliases:
+- xt-ds-lv2-store
 - xt-ds-offer
 - xt-ds
-name: XT-DS
+current: true
+legacy_aliases:
+- plugin_xt_ds
+name: XT-DS De-Esser
+part: xt_ds
 price: 29
 set: XT
 signer: helium
 token: D
-part: xt_ds
-legacy_aliases:
-  - plugin_xt_ds
-current: true
