Add new plugged-in membership alias to product defs

--- a/products/subscription.yaml
+++ b/products/subscription.yaml
@@ -2,5 +2,6 @@ name: Plugged-In Membership
 aliases: 
   - Mixbus Plugged-In membership 
   - Mixbus Subscription
+  - plugged-in-membership 
 set: Extras
 price: 9
