Remove staging credentials

--- a/config.yaml
+++ b/config.yaml
@@ -1,9 +1,9 @@
-DB_AUTH: [postgres, secret]
+DB_AUTH: [foo, bar]
 FS_AUTH: [foo, bar]
 MC_AUTH: [foo, bar]
 
 DB_HOST: localhost
-DB_PORT: 5555
+DB_PORT: 5432
 
 RD_HOST: localhost
 RD_PORT: 6379
