Replace requests-mock with pytest-env
We unfortunately cannot use requests-mock yet. It would be too much time to set up.

Instead we are going to use pytest-env to forward credentials for tests

--- a/Pipfile
+++ b/Pipfile
@@ -10,7 +10,7 @@ sphinx = "*"
 testing-postgresql = "*"
 alembic = "*"
 pytest-redis = "*"
-requests-mock = "*"
+pytest-env = "*"
 
 [packages]
 sqlalchemy = "*"
