Substitute testing-postgresql for pytest-postgresql
The pytest-postgresql library is much better and works with fixtures
and has better state handling

In addition, we remove PostgreSQL singleton status

--- a/Pipfile
+++ b/Pipfile
@@ -7,10 +7,10 @@ verify_ssl = true
 pytest = "*"
 pylint = "*"
 sphinx = "*"
-testing-postgresql = "*"
 alembic = "*"
 pytest-redis = "*"
 pytest-env = "*"
+pytest-postgresql = "*"
 
 [packages]
 sqlalchemy = "*"
