--- a/.gitlab-ci.yml
+++ b/.gitlab-ci.yml
@@ -5,12 +5,10 @@ image: debian
 
 before_script:
   - apt update -qy
-  - apt install pipenv
+  - apt install pipenv postgresql-12 redis-server
   - python -V
   - pipenv install && pipenv install --dev
 
 test:
   script:
     - pipenv run pytest
-    #- pip install tox flake8  # you can also use tox
-    #- tox -e py36,flake8
